; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/iucv/extr_iucv.c_iucv_sever_pathid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/iucv/extr_iucv.c_iucv_sever_pathid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.iucv_param = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@iucv_param_irq = common dso_local global %union.iucv_param** null, align 8
@IUCV_SEVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @iucv_sever_pathid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iucv_sever_pathid(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %union.iucv_param*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load %union.iucv_param**, %union.iucv_param*** @iucv_param_irq, align 8
  %7 = call i64 (...) @smp_processor_id()
  %8 = getelementptr inbounds %union.iucv_param*, %union.iucv_param** %6, i64 %7
  %9 = load %union.iucv_param*, %union.iucv_param** %8, align 8
  store %union.iucv_param* %9, %union.iucv_param** %5, align 8
  %10 = load %union.iucv_param*, %union.iucv_param** %5, align 8
  %11 = call i32 @memset(%union.iucv_param* %10, i32 0, i32 8)
  %12 = load i32*, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %union.iucv_param*, %union.iucv_param** %5, align 8
  %16 = bitcast %union.iucv_param* %15 to %struct.TYPE_2__*
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @memcpy(i32 %18, i32* %19, i32 4)
  br label %21

21:                                               ; preds = %14, %2
  %22 = load i32, i32* %3, align 4
  %23 = load %union.iucv_param*, %union.iucv_param** %5, align 8
  %24 = bitcast %union.iucv_param* %23 to %struct.TYPE_2__*
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32 %22, i32* %25, align 4
  %26 = load i32, i32* @IUCV_SEVER, align 4
  %27 = load %union.iucv_param*, %union.iucv_param** %5, align 8
  %28 = call i32 @iucv_call_b2f0(i32 %26, %union.iucv_param* %27)
  ret i32 %28
}

declare dso_local i64 @smp_processor_id(...) #1

declare dso_local i32 @memset(%union.iucv_param*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @iucv_call_b2f0(i32, %union.iucv_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
